Bug 1843823: Plans block running into next plan when more than one
Inside a plan block when there are more than two plans, the second
plan's heading overlaps the first plan. Fix puts in a clear both
in the div.

behatnotneeded

--- a/htdocs/theme/raw/sass/layout/card/_card-secondary.scss
+++ b/htdocs/theme/raw/sass/layout/card/_card-secondary.scss
@@ -69,6 +69,7 @@
         padding: 15px 0px;
         &.flush {
             padding: 15px 0 0 0;
+            clear: both;
         }
     }
     // If there is no heading we don't want padding on the card-body
